# rag-app-server

./: .env.example  .gitignore  README.md  database.py  main.py  pyproject.toml  readme.md  tasks.py  test_presigned.py
src/: auth.py
src/config/: index.py
src/rag/ingestion/: index.py
src/rag/retrieval/: index.py
src/routers/: chats.py  files.py  projects.py  users.py
src/services/: celery.py  llm.py  s3.py
supabase/migrations/: 20251212184412_initial_schema.sql
